--- a/page/component/home/index.wxml
+++ b/page/component/home/index.wxml
@@ -34,12 +34,12 @@
     <view wx:else>
       <view id="rec_nav">
         <view>
-          <navigator url="../fm/index">
+          <view bindtap='tips' class='addLayer'>
             <view class="recn_ico">
               <image src="../../../image/cm2_discover_icn_fm-ip6@2x.png"></image>
             </view>
             私人FM
-          </navigator>
+          </view>
         </view>
         <view>
           <navigator url="../recsongs/index">
