--- a/page/component/home/index.wxss
+++ b/page/component/home/index.wxss
@@ -5,7 +5,7 @@ swiper,swiper image{width: 750rpx;height:290rpx;}
 #main{min-height: 1200rpx;padding-top: 80rpx;}
 #rec_nav{display: flex; text-align: center;width: 100%;border-bottom: 1rpx solid #eee}
 #rec_nav view{flex: 1;position: relative}
-#rec_nav navigator{padding:25rpx 0;font-size: 26rpx;}
+#rec_nav navigator,.addLayer{padding:25rpx 0;font-size: 26rpx;}
 .recn_ico{width: 110rpx;height:110rpx;line-height: 110rpx;font-size: 56rpx;color: #BB2C08;border: 1rpx solid #BB2C08;border-radius: 50%;margin:0 auto 20rpx;font-weight: 300}
 .recn_ico image{width:110rpx;height:110rpx;}
 .homepl .tl_cnt{width: 168.75rpx;}
